<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="songs">Медиатека</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>

</resources>