<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3772E7"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="14dp"
    android:paddingBottom="28dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display"
        android:paddingVertical="14dp"
        android:paddingStart="16dp"
        android:paddingEnd="14dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_header_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />


    <Button
        android:id="@+id/search_b"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_display"
        android:letterSpacing="0"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_textsize"
        android:textStyle="bold"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/vector"
        app:iconGravity="textStart"
        app:iconPadding="10sp"
        app:iconTint="@color/black"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="65dp" />


    <Button
        android:id="@+id/media_b"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/main_margin_top"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_display"
        android:letterSpacing="0"
        android:text="@string/songs"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_textsize"
        android:textStyle="bold"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconPadding="10.66sp"
        app:iconTint="@color/black"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="285dp" />

    <Button
        android:id="@+id/settings_b"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/main_margin_top"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_display"
        android:letterSpacing="0"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_textsize"
        android:textStyle="bold"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="10sp"
        app:iconTint="@color/black"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="505dp" />


</LinearLayout>



